Removed z-index bug and added UI functionality

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-body {
+body,
+html {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
+    height: 100vh;
+}
+
+:root {
+    --sidebar-bg: #ab5fd3;
 }
 
 .sidebar-nav {
@@ -11,22 +17,39 @@ body {
     padding-left: 20px;
 }
 
-.sidebar-nav>li {
-    display: inline-grid;
-    grid-template-columns: auto auto;
-    justify-content: start;
-    gap: 16px;
-}
-
 .nav-title {
     font-size: 36px;
     margin-bottom: 12px;
 }
 
-.nav-link {
+.sidebar-link {
+    display: inline-flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.page-link,
+.sidebar-link {
     text-decoration: none;
     color: inherit;
-    align-self: center;
+}
+
+.sidebar-link:hover {
+    color: #121212;
+}
+
+.search-label {
+    align-self: end;
+}
+
+.ui-elem:hover {
+    color: var(--sidebar-bg);
+}
+
+.svg-btn {
+    border: none;
+    background-color: inherit;
+    cursor: pointer;
 }
 
 svg {
@@ -36,13 +59,12 @@ svg {
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto 1fr;
 }
 
 .nav-container {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    background-color: #ab5fd3;
+    background-color: var(--sidebar-bg);
     font-weight: bold;
     color: #fff;
 }
@@ -56,6 +78,8 @@ svg {
     grid-auto-rows: minmax(min-content, max-content);
     padding: 20px 50px;
     gap: 30px;
+    position: relative;
+    z-index: 1;
 }
 
 .ui-options>div {
@@ -117,14 +141,32 @@ img {
     gap: 30px;
 }
 
+.transition-elem {
+    transition: 0.3s;
+}
+
 .ui-button {
+    background-color: inherit;
+    border: none;
+}
+
+.post-button {
     color: #fff;
-    background-color: #ab5fd3;
+    background-color: var(--sidebar-bg);
     border: none;
     font-family: inherit;
     padding: 8px;
     width: 80px;
     border-radius: 24px;
+}
+
+.ui-button,
+.post-button {
+    cursor: pointer;
+}
+
+.post-button:hover {
+    background-color: #703e8a;
 }
 
 [type="search"] {
@@ -137,8 +179,6 @@ img {
 .page-content {
     grid-column: 2 /3;
     background-color: #e0ddff;
-    position: relative;
-    z-index: -9000;
     padding: 10px 30px;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -243,4 +283,12 @@ img {
 hr {
     color: #fff;
     margin: 16px 0;
+}
+
+@media (max-width: 500px) {
+    .grid-container {
+        display: grid;
+        /* flex-direction: column; */
+        grid-auto-flow: column;
+    }
 }
